# algorithms-and-data-structures-24

./: CMakeLists.txt
1week/: d.cpp  i.cpp  j.cpp
lab1/: a.cpp  b.cpp  c.cpp  e.cpp  f.cpp  g.cpp  h.cpp
