cmake_minimum_required(VERSION 3.10)

project(ads24)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(program_a 1week/a.cpp)
add_executable(program_b 1week/b.cpp)
add_executable(program_c 1week/c.cpp)
add_executable(program_e 1week/e.cpp)
add_executable(program_d 1week/d.cpp)
add_executable(program_f 1week/f.cpp)
add_executable(program_g 1week/g.cpp)
add_executable(program_h 1week/h.cpp)
add_executable(program_i 1week/i.cpp)
add_executable(program_j 1week/j.cpp)
