cmake_minimum_required(VERSION 3.10)

project(ads24)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(program_a lab1/a.cpp)
add_executable(program_b lab1/b.cpp)
add_executable(program_c lab1/c.cpp)
add_executable(program_e lab1/e.cpp)
add_executable(program_d lab1/d.cpp)
add_executable(program_f lab1/f.cpp)
add_executable(program_g lab1/g.cpp)
add_executable(program_h lab1/h.cpp)
add_executable(program_i lab1/i.cpp)
add_executable(program_j lab1/j.cpp)
